maze.wallfollower.WallFollowerMaze.scala.error
Erreur de compilation :
WallFollowerMaze:12: error: not found: value nord
  setDirection(nord)
               ^